depr/p1/sample_tests/pos/comment2.java
class Comment2{
	/* This is a comment */
	public static void main(String[] args){
	}
}
