depr/p1/sample_tests/neg/comment1.java
class Comment1{
	/ This is a comment
	public static void main(String[] args){
	}
}
